TSP-421: add a Bruno collection; fixed endpoint according to REST API best practice